<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/inputDialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar_bg">

        <TextView
            android:id="@+id/inputDialog_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/inputDialog_title"
            android:textColor="@color/bg_white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/inputDialog_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:text="@string/button_submit"
            android:textColor="@color/bg_white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputDialog_title_layout">

        <LinearLayout
            android:id="@+id/et_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_barCode"
                android:textColor="@color/bg_red" />

            <EditText
                android:id="@+id/inputDialog_barCode_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:enabled="false"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/et_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_layout1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_xiangShu" />

            <EditText
                android:id="@+id/inputDialog_xiangShu_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/et_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_layout2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_jianShu" />

            <EditText
                android:id="@+id/inputDialog_jianShu_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_style" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
