<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/updateDialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar_bg">
        <TextView
            android:id="@+id/updateDialog_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/updateDialog_title"
            android:textSize="20dp"
            android:textColor="#fff"
            android:layout_margin="10dp" />
        <TextView
            android:id="@+id/updateDialog_submit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="#fff"
            android:text="@string/dialog_submit"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/updateDialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/et_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tv_barCode"
                android:textColor="#f00"
                android:gravity="center"/>

            <EditText
                android:id="@+id/updateDialog_barCode_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:enabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/et_layout2"
            android:layout_below="@id/et_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tv_xiangShu"
                android:gravity="center"/>

            <EditText
                android:id="@+id/updateDialog_xiangShu_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/et_layout3"
            android:layout_below="@id/et_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tv_jianShu"
                android:gravity="center"/>
            <EditText
                android:id="@+id/updateDialog_jianShu_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
